1. Completed job creation. 2. Job modification for intervals, CRONS, OBIS Code for job datamap etc. 3. Profiles harmonization to use the same parameters. 4. Successful job execution. 5. Other bug fixes.